style: fix color contrast

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,5 +1,5 @@
 :root {
-  --color-background: hsl(29.13deg 52.28% 61.37%);
+  --color-background: hsl(29.13deg 52.28% 76.65%);
   --color-text: hsl(355deg 16% 31%);
   --color-text-highlighted: hsl(355deg 16% 26%);
   --color-text-muted: hsl(355deg 16% 36%);
